# wsg_test2

./: Cargo.toml  mk_sound_score.py  mk_sound_score.py.out  td1_4.1k
src/: audio_lib4.rs  direction.rs  game_window.rs  input_role.rs  main.rs  music_data.rs  sound_generator.rs  sound_manager.rs  wait_and_update.rs  wave_data.rs
src/bgsp_data/: bgchar_data.rs  bgpal_data.rs  mod.rs  spchar_data.rs  sppal_data.rs
src/sound_generator/: mod.rs  wave_data.rs
src/sound_manager/: envelope_tbl.rs  mod.rs  scale_set.rs  sound_index.rs  sound_score.rs
